# bsuir-32170062

./: README.md
AOIS/binary_nums/: .gitignore  requirements.txt
AOIS/binary_nums/scripts/: main.py
AOIS/binary_nums/src/: binary_codes.py  ieee754.py  utils.py
AOIS/binary_nums/tests/: test_binary_codes.py  test_ieee754.py  test_utils.py
AOIS/lab2_sknf_sdnf/: .gitignore  main.py
AOIS/lab2_sknf_sdnf/normal_forms/: builder.py
AOIS/lab2_sknf_sdnf/parser/: logic_parser.py
AOIS/lab2_sknf_sdnf/tests/: test_logic_parser.py  test_normal_forms.py  (+2 more)
AOIS/lab3_minimization/: main.py
Hotel/Hotel/: Administrator.cpp  Administrator.h  Amenity.cpp  Amenity.h  CleaningStaff.cpp  CleaningStaff.h  Employee.cpp  Employee.h  Guest.cpp  Guest.h  Hotel.cpp  Hotel.h  Invoice.cpp  Invoice.h  MaintenanceRequest.cpp  MaintenanceRequest.h  Manager.cpp  Manager.h  Notification.cpp  Notification.h  Payment.cpp  Payment.h  Person.cpp  Person.h  Reservation.cpp  Reservation.h  Review.cpp  Review.h  Room.cpp  Room.h  Service.cpp  Service.h
Hotel/HotelTest/: AdministratorTest.cpp  AmenityTest.cpp  CleaningStaffTest.cpp  EmployeeTest.cpp  GuestTest.cpp  HotelTest.cpp  InvoiceTest.cpp  MaintenanceRequestTest.cpp  ManagerTest.cpp  NotificationTest.cpp  PaymentTest.cpp  PersonTest.cpp  ReservationTest.cpp  ReviewTest.cpp  RoomTest.cpp  ServiceTest.cpp
Lab1_sem2/NewYear_Lab/: виды исключений try-exept.md  итоговая структура.md
PPOIS/Rectangle_lab1/: CMakeLists.txt
PPOIS/Rectangle_lab1/Rectangle/: Rectangle.cpp  Rectangle.h  main.cpp
PPOIS/Rectangle_lab1/RectangleTest/: test.cpp
(+22 files in other folders)
